--- a/.env
+++ b/.env
@@ -13,7 +13,8 @@ APP_SECRET=3fe16bb2a67581efdcccdcd560254a92
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:@localhost:3306/library
+#DATABASE_URL=mysql://root:@localhost:3306/library
+DATABASE_URL=sqlite:///%kernel.project_dir%/data/bookeria.sqlite
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
