--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -6,14 +6,14 @@ security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
         # used to reload user from session & other features (e.g. switch_user)
-        #app_user_provider:
-        #    entity:
-        #        class: App\Entity\User
-        #        property: email
-        api_key_user_provider:
+        app_user_provider:
             entity:
                 class: App\Entity\User
-                property: apiToken
+                property: email
+        # api_key_user_provider:
+        #     entity:
+        #         class: App\Entity\User
+        #         property: apiToken
 
     firewalls:
         dev:
